--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,19 +1,36 @@
-{% extends 'blog/base.html' %}
+{% extends 'blog/base.html' %} {% block content %}
+<article class="post">
+  <aside class="actions">
+    {% if user.is_authenticated %}
+    <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">
+      Edit
+    </a>
+    {% endif %}
+  </aside>
 
-{% block content %}
-    <article class="post">
-        <aside class="actions">
-	     {% if user.is_authenticated %}
-	       <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">Edit</a>
-	     {% endif %}
-	    </aside>
+  {% if post.published_date %}
+  <time class="date"> {{ post.published_date }} </time>
+  {% endif %}
 
-        {% if post.published_date %}
-            <time class="date">
-                {{ post.published_date }}
-            </time>
-        {% endif %}
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.text|linebreaksbr }}</p>
-    </article>
+  <h2>{{ post.title }}</h2>
+  <p>{{ post.text|linebreaksbr }}</p>
+</article>
+<hr>
+<a class="btn btn-secondary" role="button" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
+{% for comment in post.comments.all %}
+    <div class="comment">
+        <div class="date">
+            {{ comment.created_date }}
+        </div>
+
+        <strong>{{ comment.author }}</strong>
+
+        <p>
+            {{ comment.text|linebreaks }}
+        </p>
+    </div>
+{% empty %}
+    <p>No comments here yet :(</p>
+{% endfor %}
+
 {% endblock %}
